--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "bcrypt": "^5.1.0",
+    "framer-motion": "^10.12.7",
     "next": "13.2.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
